# ai-code-review-and-bug-detection

./: .env.example  .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: health.py
backend/app/core/: __init__.py  config.py
backend/app/database/: __init__.py
backend/app/graphql/: inputs.py  router.py  schema.py  types.py
backend/app/services/: __init__.py  analyzer.py  llm_reviewer.py  review_service.py
backend/tests/: test_cors.py  test_graphql.py  test_health.py  test_llm_review.py
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json
frontend/src/: App.tsx  main.tsx
frontend/src/graphql/: client.ts  operations.ts  types.ts
frontend/src/hooks/: useAnalyzeCode.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: AnalyzerPage.tsx  LandingPage.tsx
frontend/src/styles/: global.css
frontend/src/utils/: languages.ts
