[project]
name = "ai-code-review-platform-backend"
version = "0.1.0"
description = "FastAPI backend for the AI Code Review and Bug Detection Platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.136.1,<0.137.0",
  "pydantic-settings>=2.14.1,<2.15.0",
  "python-dotenv>=1.1.0,<2.0.0",
  "strawberry-graphql[fastapi]>=0.315.5,<0.316.0",
  "uvicorn[standard]>=0.47.0,<0.48.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "pytest>=9.0.3,<10.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
